# lab5_ml

./: download.py  params.yaml  pyproject.toml  train.py
